[package]
name = "dellange_rust_jam_2022"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
dev = ['bevy/dynamic']

[dependencies]
anyhow = "^1.0"
bevy = { version = "0.7", features = [
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher",
] }
bevy-inspector-egui = "0.11"
bevy_egui = "0.14"
# Bevy already uses the `rand` crate, so just go with the flow :)
rand = "*"

[dependencies.bevy_kira_audio]
version = "0.9.0"
features = ["wav"]
